# TritonBot

./: .gitignore  CMakeLists.txt  Client.cpp  LICENSE  README.md  launch.json  nani
config/: test.ini
deprecated/: test.ini
inc/: boost_logger.hpp
include/BallCaptureModule/: ball_capture_module.hpp
include/Config/: BotConfig.hpp  CliConfig.hpp  Config.hpp  ModuleFrequencies.hpp  config.hpp
include/ConnectionServerModule/: connection_server.hpp  connection_server_module.hpp
include/ControlModule/: control_module.hpp  pid.hpp  pid_system.hpp  virtual_pid_system.hpp
include/CoreModules/: Conversion.hpp  DataCmdTypes.hpp
include/CoreModules/BallCaptureModule/: BallCaptureModule.hpp
include/CoreModules/CameraModule/: CameraModule.hpp
include/CoreModules/CommandProcessorModule/: CommandProcessorModule.hpp  Conversion.hpp
include/CoreModules/ControlModule/: ControlModule.hpp
include/CoreModules/DataProcessorModule/: DataProcessorModule.hpp
include/CoreModules/EKF-Module/: BallEkfModule.hpp  MotionEkfModule.hpp
include/CoreModules/MotionControllerModule/: MotionControllerModule.hpp  PIDAlgorithm.hpp
include/CoreModules/MotionModule/: MotionModule.hpp
include/DataFusion/: BallDataFusion.hpp  BotDataFusion.hpp
include/EKF-Module/: ball_ekf_module.hpp  motion_ekf.hpp  motion_ekf_module.hpp  virtual_ball_ekf.hpp  virtual_motion_ekf.hpp
include/FirmClientModule/: firmware_client_module.hpp  vfirm_client.hpp
include/InternVisionModule/: internal_vision_module.hpp
include/Main/: settings.hpp
include/ManualTest/: DEPRECATED_vftest.hpp  ManualTest.hpp  TestRunner.hpp
include/ManualTest/CoreModuleTests/: BallCapTest.hpp  CommandProcessorModuleTest.hpp  ConversionTest.hpp  DataProcessorModuleTest.hpp  MotionControllerModuleTest.hpp
include/ManualTest/IntegrationTests/: IntegrationMonitorTest.hpp
include/ManualTest/MiscTests/: PeriodicThreadTest.hpp  PubSubTest.hpp
include/ManualTest/PeriphModuleTests/: McuClientModuleTest.hpp  TcpReceiveModuleTest.hpp  UdpReceiveModuleTest.hpp
include/MicroCtrlerClient/: microctrler_client_module.hpp  vfirm_client.hpp
include/MicroCtrlerInterface/: vfirm_client.hpp
include/Misc/PubSubSystem/: Module.hpp  PubSub.hpp  ThreadPool.hpp
include/Misc/RapidJson/: document.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  writer.h
include/Misc/Utility/: BoostLogger.hpp  ClockUtil.hpp  Common.hpp  Systime.hpp
include/MotionModule/: motion_module.hpp
include/PeriphModules/CameraClientModule/: CameraClientModule.hpp
include/PeriphModules/FirmClientModule/: FirmClientModule.hpp
include/PeriphModules/McuClientModule/: DEPRECATED_VFirmClient.hpp  McuClientModule.hpp
include/PeriphModules/RemoteServers/: CmdServerModule.hpp  ConServerModule.hpp  GVisServerModule.hpp  TcpReceiveModule.hpp  UdpReceiveModule.hpp
include/PeriphModules/VirtualBot/: GrSimClientModule.hpp
include/PubSubModule/: cp_queue.hpp  inter_thread_pubsub.hpp  module.hpp  thread_pool.hpp
include/PubSubSystem/: inter_thread_pubsub.hpp  module.hpp  publisher_subscriber.hpp
include/RemoteServers/ConnectionServer/: connection_server_module.hpp
include/RemoteServers/InternalEkfServer/: internal_ekf_server_module.hpp
include/RemoteServers/RemoteCMDServer/: cmd_server_module.hpp
include/RulesKeeper/: field.hpp
include/Utility/: common.hpp
proto/: CMakeLists.txt  RemoteAPI.proto  vFirmware_API.proto
proto/ProtoGenerated/: RemoteAPI.pb.cc  RemoteAPI.pb.h  message.pb.cc  message.pb.h  vFirmware_API.pb.cc  vFirmware_API.pb.h
source/: main.cpp
source/BallCaptureModule/: ball_capture_module.cpp
source/Config/: BotConfig.cpp  CliConfig.cpp  Config.cpp  config.cpp
source/ConnectionServerModule/: connection_server.cpp
source/ControlModule/: control_module.cpp  controller.cpp  pid_control.cpp  pid_system.cpp  virtual_pid_system.cpp
source/CoreModules/: Conversion.cpp  DataCmdTypes.cpp
source/CoreModules/BallCaptureModule/: BallCaptureModule.cpp
source/CoreModules/CommandProcessorModule/: CommandProcessorModule.cpp  Conversion.cpp
source/CoreModules/ControlModule/: ControlModule.cpp
source/CoreModules/DataProcessorModule/: DataProcessorModule.cpp
source/CoreModules/EKF-Module/: BallEkfModule.cpp  MotionEkfModule.cpp
source/CoreModules/MotionControllerModule/: MotionControllerModule.cpp
source/CoreModules/MotionModule/: MotionModule.cpp
source/DataFusion/: BallDataFusion.cpp  BotDataFusion.cpp
source/EKF-Module/: ball_ekf_module.cpp  motion_ekf_module.cpp  virtual_ball_ekf.cpp  virtual_motion_ekf.cpp
source/FirmClientModule/: vfirm_client.cpp
source/Main/: Client.cpp  settings.cpp  tritonbot.cpp
source/ManualTest/: DEPRECATED_vftest.cpp  ManualTest.cpp  TestRunner.cpp
source/ManualTest/CoreModuleTests/: BallCapTest.cpp  CommandProcessorModuleTest.cpp  ConversionTest.cpp  DataProcessorModuleTest.cpp  MotionControllerModuleTest.cpp
source/ManualTest/IntegrationTests/: IntegrationMonitorTest.cpp
source/ManualTest/MiscTests/: PeriodicThreadTest.cpp  PubSubTest.cpp
source/ManualTest/PeriphModuleTests/: McuClientModuleTest.cpp  TcpReceiveModuleTest.cpp  UdpReceiveModuleTest.cpp
source/MicroCtrlerClient/: vfirm_client.cpp
source/MicroCtrlerInterface/: vfirm_client.cpp
source/Misc/PubSubSystem/: Module.cpp
source/Misc/Utility/: BoostLogger.cpp  ClockUtil.cpp  Common.cpp  Systime.cpp
source/MotionModule/: motion_module.cpp
source/PeriphModules/CameraClientModule/: CameraClientModule.cpp
source/PeriphModules/FirmClientModule/: FirmClientModule.cpp
source/PeriphModules/McuClient/: DEPRECATED_VFirmClient.cpp
source/PeriphModules/McuClientModule/: DEPRECATED_VFirmClient.cpp  McuClientModule.cpp
source/PeriphModules/RemoteServers/: CmdServerModule.cpp  ConServerModule.cpp  GVisServerModule.cpp  TcpReceiveModule.cpp  UdpReceiveModule.cpp
source/PeriphModules/VirtualBot/: GrSimClientModule.cpp
source/Utility/: boost_logger.cpp  common.cpp  systime.cpp
src/: CMakeLists.txt  Client.cpp  boost_logger.cpp
test/: CMakeLists.txt  Test.cpp  Test1.cpp
(+20 files in other folders)
